--- a/index.html
+++ b/index.html
@@ -51,7 +51,7 @@ $ git checkout gh-pages
     <!-- FOOTER  -->
     <div id="footer_wrap" class="outer">
       <footer class="inner">
-        <p class="copyright">Intro to Python maintained by <a href="https://github.com/mcdickenson">mcdickenson</a></p>
+        <p class="copyright">Intro to Python created by <a href="https://github.com/mcdickenson">mcdickenson</a></p>
         <p>Published with <a href="http://pages.github.com">GitHub Pages</a></p>
       </footer>
     </div>
