add schedule link to homepage

--- a/index.html
+++ b/index.html
@@ -32,17 +32,17 @@
     <div id="main_content_wrap" class="outer">
       <section id="main_content" class="inner">
         <h3>
-<a name="welcome-to-the-course-resource-page" class="anchor" href="#welcome-to-the-course-resource-page"><span class="octicon octicon-link"></span></a>Welcome to the course resource page</h3>
+<a name="welcome-to-the-course-resource-page" class="anchor" href="#welcome-to-the-course-resource-page"><span class="octicon octicon-link"></span></a>Course Resources</h3>
 
-<p>This automatic page generator is the easiest way to create beautiful pages for all of your projects. Author your page content here using GitHub Flavored Markdown, select a template crafted by a designer, and publish. After your page is generated, you can check out the new branch:</p>
+<h4>Course Materials</h4>
+<div >
+  <a href="./schedule.html">Schedule</a>
+  <a href="./homeworks.html">HWs</a>
+</div>
 
-<pre><code>$ cd your_repo_root/repo_name
-$ git fetch origin
-$ git checkout gh-pages
-</code></pre>
 
-<h3>
-<a name="instructor" class="anchor" href="#instructor"><span class="octicon octicon-link"></span></a>Instructor</h3>
+<h4>
+<a name="instructor" class="anchor" href="#instructor"><span class="octicon octicon-link"></span></a>Instructor</h4>
 
 <p>Matt Dickenson (<a href="https://github.com/mcdickenson" class="user-mention">@mcdickenson</a>)</p>
       </section>
