--- a/index.html
+++ b/index.html
@@ -22,8 +22,8 @@
           <h2 id="project_tagline">Washington University, Summer 2014.</h2>
 
             <section id="downloads">
-              <a class="zip_download_link" href="https://github.com/mcdickenson/python-washu-2014/zipball/master">Download this project as a .zip file</a>
-              <a class="tar_download_link" href="https://github.com/mcdickenson/python-washu-2014/tarball/master">Download this project as a tar.gz file</a>
+              <a href="./schedule.html">Schedule</a>
+              <a href="./homeworks.html">HWs</a>
             </section>
         </header>
     </div>
@@ -34,7 +34,6 @@
         <h3>
 <a name="welcome-to-the-course-resource-page" class="anchor" href="#welcome-to-the-course-resource-page"><span class="octicon octicon-link"></span></a>Course Resources</h3>
 
-<h4>Course Materials</h4>
 <div >
   <a href="./schedule.html">Schedule</a>
   <a href="./homeworks.html">HWs</a>
