add course overview

--- a/index.html
+++ b/index.html
@@ -21,9 +21,9 @@
           <h1 id="project_title">Intro to Python</h1>
           <h2 id="project_tagline">Washington University, Summer 2014.</h2>
 
-            <section id="downloads">
+            <section>
               <a href="./schedule.html">Schedule</a>
-              <a href="./homeworks.html">HWs</a>
+              <a href="./homeworks.html">Assignments</a>
             </section>
         </header>
     </div>
@@ -34,10 +34,25 @@
         <h3>
 <a name="welcome-to-the-course-resource-page" class="anchor" href="#welcome-to-the-course-resource-page"><span class="octicon octicon-link"></span></a>Course Resources</h3>
 
-<div >
+
+<h4>Topics</h4>
+<div>
+  <ul>
+  <li>Python syntax (e.g. conditionals, flow control, functions)</li>
+  <li>Object-oriented programming (objects, classes, instances, inheritance)</li>
+  <li>Algorithmic concepts (e.g. recursion, computational complexity)</li>
+  <li>Data structures (trade-offs, use cases, and implementation)</li>
+  <li>Source/version control (git and Github)</li>
+  <li>Software testing</li>
+  <li>Interacting with other programs (web scraping, APIs)</li>
+  <li>Databases (SQL, MongoDB)</li>
+  <li>How to apply these concepts in your own research projects (building classifiers, natural language processing, etc)</li>
+  </ul>
   <a href="./schedule.html">Schedule</a>
   <a href="./homeworks.html">HWs</a>
 </div>
+
+
 
 
 <h4>
