--- a/schedule.html
+++ b/schedule.html
@@ -20,6 +20,11 @@
 
           <h1 id="project_title">Intro to Python</h1>
           <h2 id="project_tagline">Washington University, Summer 2014.</h2>
+
+          <section>
+              <a href="./index.html">Home</a>
+              <a href="./homeworks.html">Assignments</a>
+            </section>
         </header>
     </div>
 
@@ -38,7 +43,7 @@
           <li>If you have time, start the readings for Week 1.</li>
           <li>Complete Assignment 0 on the homework page.</li>
           </ul>
-        
+
         <h4>Week 1</h4>
 
           <p>August 4-8</p>
