add setup instructions to resource page

--- a/index.html
+++ b/index.html
@@ -52,13 +52,36 @@
   <a href="./homeworks.html">HWs</a>
 </div>
 
+<h4>Setting up your development environment</h4>
+  The setup can often be the hardest part, so don't get discouraged. If you get into trouble feel free to send me an email. 
+  <h5>OS X</h5>
+  <div>
+  <ol>
+    <li>Install Homebrew (<a href="http://mxcl.github.com/homebrew/">http://mxcl.github.com/homebrew/</a>).</li></li>
+    <li>From the Terminal type in the following: 
+    <code>
+    ruby -e "$(curl -fsSL https://raw.github.com/Homebrew/homebrew/go/install)"
+    </code></li>
+    <li>From the command line (you may need to do this in a new terminal window), install Python (version 2.7.6): 
+    <code>
+    brew install python
+    </code></li>
+    <li>Setup Python as your OSX framework version. This info is in the output from when you install python, so copy the commands and use them, but they should look like this: 
+    <code>
+    mkdir ~/Frameworks 
+    ln -s "/usr/local/Cellar/python/2.7.6/Frameworks/Python.framework" ~/Frameworks
+    </code></li>
+  </ol>
+  </div>
 
+  <h5>PC</h5>
+    <p>If you are on a PC install the Activestate Python (as described in <i>Learn Python the Hard Way</a>).  Make sure it is Python 2.7.5 or 2.7.5.</p>
 
 
 <h4>
 <a name="instructor" class="anchor" href="#instructor"><span class="octicon octicon-link"></span></a>Instructor</h4>
 
-<p>Matt Dickenson (<a href="https://github.com/mcdickenson" class="user-mention">@mcdickenson</a>)</p>
+<p>Matt Dickenson (<a href="https://github.com/mcdickenson" class="user-mention">@mcdickenson</a>, <a href="mailto:mcdickenson@gmail.com">email</a>)</p>
       </section>
     </div>
 
