--- a/schedule.html
+++ b/schedule.html
@@ -38,10 +38,10 @@
           <p>pre-August 4</p>
 
           <ul>
-          <li>Set up your Python development environment as covered on the course resource page.</li>
+          <li>Set up your Python development environment as covered on the <a href="./index.html">course resource page</a>.</li>
           <li>Work through exercises 1-14 and 18-35 of <a href="http://learnpythonthehardway.org/book/"><em>Learn Python the Hard Way</em></a>.</li>
           <li>If you have time, start the readings for Week 1.</li>
-          <li>Complete Assignment 0 on the homework page.</li>
+          <li>Complete Assignment 0 on the <a href="./homeworks.html">homework page</a>.</li>
           </ul>
 
         <h4>Week 1</h4>
