minor styling tweaks

--- a/homeworks.html
+++ b/homeworks.html
@@ -22,7 +22,7 @@
           <h2 id="project_tagline">Washington University, Summer 2014.</h2>
 
           <section>
-              <a href="./index.html">Home</a>
+              <a href="./index.html">Home</a> |
               <a href="./schedule.html">Schedule</a>
             </section>
         </header>
