--- a/index.html
+++ b/index.html
@@ -22,7 +22,7 @@
           <h2 id="project_tagline">Washington University, Summer 2014.</h2>
 
             <section>
-              <a href="./schedule.html">Schedule</a>
+              <a href="./schedule.html">Schedule</a> |
               <a href="./homeworks.html">Assignments</a>
             </section>
         </header>
@@ -48,8 +48,6 @@
   <li>Databases (SQL, MongoDB)</li>
   <li>How to apply these concepts in your own research projects (building classifiers, natural language processing, etc)</li>
   </ul>
-  <a href="./schedule.html">Schedule</a>
-  <a href="./homeworks.html">HWs</a>
 </div>
 
 <h4>Setting up your development environment</h4>
@@ -75,7 +73,7 @@
   </div>
 
   <h5>PC</h5>
-    <p>If you are on a PC install the Activestate Python (as described in <i>Learn Python the Hard Way</a>).  Make sure it is Python 2.7.5 or 2.7.5.</p>
+    <p>If you are on a PC install the Activestate Python (as described in <i>Learn Python the Hard Way</i>).  Make sure it is Python 2.7.6.</p>
 
 
 <h4>
