update schedule page

--- a/schedule.html
+++ b/schedule.html
@@ -51,12 +51,16 @@
           <ol>
           <li>Intro to Building Software
           <ul><li>Course details</li>
-          <li>Source Control</li>
-          <li>Testing</li></ul></li>
+          <li>Source Control</li></ul></li>
           <li>Object-Oriented Programming
           <ul><li>Objects, Classes, and Instances</li>
-          <li>Inheritance</li>
+          <li>Inheritance and Polymorphism</li>
+          <li>Composition</li>
           <li>SOLID Design principles</li></ul></li>
+          <li>When Things Go Wrong
+          <ul><li>Testing</li>
+          <li>Exceptions</li>
+          <li>Degugging</li></ul></li>
           <li>Intro to Algorithms</li>
           <li>Intro to Data Structures</li>
           </ol>
