--- a/homeworks.html
+++ b/homeworks.html
@@ -44,6 +44,16 @@
           <li>Try editing files, committing your changes, and pushing them to Github. It's highly unlikely that you will "break" anything, and if you get stuck there will still be a history of the files. This is a low-risk way to learn. </li>
           </ol>
 
+        <h4>Assignment 1</h4>
+
+          <p>Submissions due August 7</p>
+
+          <ol>
+          <li>See the <a href="https://github.com/mcdickenson/python-washu-2014/blob/master/day2/school-readme.md">readme</a> for the project description</li>
+          <li>Get the <a href="https://github.com/mcdickenson/python-washu-2014/blob/master/day2/grade_school_test.py">tests</a> passing.</li>
+          <li>Refactor (clean up) your code to make it as pleasant to read as possible. </li>
+          </ol>
+
       </section>
     </div>
 
