add reading for day 2

--- a/homeworks.html
+++ b/homeworks.html
@@ -49,9 +49,9 @@
           <p>Submissions due August 7</p>
 
           <ol>
-          <li>See the <a href="https://github.com/mcdickenson/python-washu-2014/blob/master/day2/school-readme.md">readme</a> for the project description</li>
+          <li>See the <a href="https://github.com/mcdickenson/python-washu-2014/blob/master/day2/school-readme.md">readme</a> for the project description.</li>
           <li>Get the <a href="https://github.com/mcdickenson/python-washu-2014/blob/master/day2/grade_school_test.py">tests</a> passing.</li>
-          <li>Refactor (clean up) your code to make it as pleasant to read as possible. </li>
+          <li>Refactor (clean up) your code to make it as pleasant to read as possible. You will be graded on both correctness and clarity.</li>
           </ol>
 
       </section>
