--- a/schedule.html
+++ b/schedule.html
@@ -73,6 +73,7 @@
             <li><a href="http://www.joelonsoftware.com/articles/Unicode.html">The Absolute Minimum Every Software Developer Absolutely, Positively Must Know About Unicode</a></li>
             <li><em><a href="http://web.archive.org/web/20130521095137/http://online.wsj.com/article/SB10000872396390443686004577633491013088640.html">Automate This</a></em>, book review by Evgeny Morozov</li>
             <li><a href="http://butunclebob.com/ArticleS.UncleBob.TheThreeRulesOfTdd">Three Rules of Test-Driven Development (TDD)</a></li>
+            <li><a href="http://www.rafekettler.com/magicmethods.html">Python's Magic Methods</a></li>
           </ul>
       </section>
     </div>
