--- a/homeworks.html
+++ b/homeworks.html
@@ -54,6 +54,16 @@
           <li>Refactor (clean up) your code to make it as pleasant to read as possible. You will be graded on both correctness and clarity.</li>
           </ol>
 
+        <h4>Assignment 2</h4>
+
+          <p>Submissions due August 11</p>
+
+          <ol>
+          <li>See the <a href="https://github.com/mcdickenson/python-washu-2014/blob/master/hw2/hw2.pdf">readme</a> for the project description.</li>
+          <li>Write your code, including unit tests.</li>
+          <li>Once all your tests pass and you have clean code (short methods, intuitive variable names), submit your code in the hw2 folder on Github.</li>
+          </ol>
+
       </section>
     </div>
 
