add midterm survey to schedule page

--- a/schedule.html
+++ b/schedule.html
@@ -75,6 +75,12 @@
             <li><a href="http://butunclebob.com/ArticleS.UncleBob.TheThreeRulesOfTdd">Three Rules of Test-Driven Development (TDD)</a></li>
             <li><a href="http://www.rafekettler.com/magicmethods.html">Python's Magic Methods</a></li>
           </ul>
+
+        <h4>Week 2</h4>
+
+          <p>August 11-15</p>
+
+          <p>Please take the <a href="https://www.surveymonkey.com/s/ZVPLYFV">midterm survey</a>.
       </section>
     </div>
 
