update schedule page

--- a/schedule.html
+++ b/schedule.html
@@ -74,13 +74,16 @@
             <li><em><a href="http://web.archive.org/web/20130521095137/http://online.wsj.com/article/SB10000872396390443686004577633491013088640.html">Automate This</a></em>, book review by Evgeny Morozov</li>
             <li><a href="http://butunclebob.com/ArticleS.UncleBob.TheThreeRulesOfTdd">Three Rules of Test-Driven Development (TDD)</a></li>
             <li><a href="http://www.rafekettler.com/magicmethods.html">Python's Magic Methods</a></li>
+            <li><a href="http://www.sorting-algorithms.com/">Sorting Algorithms Visualized</a></li>
           </ul>
 
         <h4>Week 2</h4>
 
           <p>August 11-15</p>
 
-          <p>Please take the <a href="https://www.surveymonkey.com/s/ZVPLYFV">midterm survey</a>.
+          <p>No class meetings this week. Complete the <a href="./homeworks.html">homework assignments</a>.</p>
+
+          <p>Please take the <a href="https://www.surveymonkey.com/s/ZVPLYFV">midterm survey</a>.</p>
       </section>
     </div>
 
