add hw 3 and 4 to the schedule page

--- a/homeworks.html
+++ b/homeworks.html
@@ -64,6 +64,25 @@
           <li>Once all your tests pass and you have clean code (short methods, intuitive variable names), submit your code in the hw2 folder on Github.</li>
           </ol>
 
+        <h4>Assignment 3</h4>
+
+          <p>Submissions due August 13</p>
+
+          <ol>
+          <li>See the <a href="https://github.com/mcdickenson/python-washu-2014/blob/master/hw3/hw3.pdf">readme</a> for the project description.</li>
+          <li>Submit your code in the hw3 folder on Github.</li>
+          </ol>
+
+        <h4>Assignment 4</h4>
+
+          <p>Submissions due August 15</p>
+
+          <ol>
+          <li>See the <a href="https://github.com/mcdickenson/python-washu-2014/blob/master/hw4/hw4.pdf">readme</a> for the project description.</li>
+          <li>Hint: think about our discussion of recursion in class.</li>
+          <li>Submit your code in the hw4 folder on Github.</li>
+          </ol>
+
       </section>
     </div>
 
