add hw and schedule for week 3

--- a/homeworks.html
+++ b/homeworks.html
@@ -83,6 +83,34 @@
           <li>Submit your code in the hw4 folder on Github.</li>
           </ol>
 
+        <h4>Assignment 5</h4>
+
+          <p>Submissions due August 19</p>
+
+          <ol>
+          <li>See the <a href="https://github.com/mcdickenson/python-washu-2014/blob/master/hw5/hw5.pdf">readme</a> for the project description.</li>
+          <li>Submit your code in the hw5 folder on Github.</li>
+          </ol>
+
+        <h4>Assignment 6</h4>
+
+          <p>Submissions due August 21</p>
+
+          <ol>
+          <li>See the <a href="https://github.com/mcdickenson/python-washu-2014/blob/master/hw6/hw6.pdf">readme</a> for the project description.</li>
+          <li>Submit your code in the hw6 folder on Github.</li>
+          </ol>
+
+        <h4>Assignment 7</h4>
+
+          <p>Submissions due August 23</p>
+
+          <ol>
+          <li>See the <a href="https://github.com/mcdickenson/python-washu-2014/blob/master/hw7/hw7.pdf">readme</a> for the project description.</li>
+          <li>Note: This assignment builds on HW5 and HW6.</li>
+          <li>Submit your code in the hw7 folder on Github.</li>
+          </ol>
+
       </section>
     </div>
 
