--- a/schedule.html
+++ b/schedule.html
@@ -84,6 +84,21 @@
           <p>No class meetings this week. Complete the <a href="./homeworks.html">homework assignments</a>.</p>
 
           <p>Please take the <a href="https://www.surveymonkey.com/s/ZVPLYFV">midterm survey</a>.</p>
+
+        <h4>Week 3</h4>
+
+          <p>August 18-22</p>
+
+          <ol>
+            <li>Input/Output (Files and Streams)</li>
+            <li>Webscraping: HTTP and HTML</li>
+            <li>Regular Expressions</li>
+            <li>Application Programming Interfaces (APIs)</li>
+            <li>Machine Learning: Classification</li>
+            <li>Data Analysis with Pandas</li>
+            <li>Databases</li>
+            <li>Optional: Datastores or Graphical User Interfaces (GUIs)</li>
+          </ol>
       </section>
     </div>
 
